# file-sorter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build  org.miika.filesorter.json
data/: meson.build  org.miika.filesorter.desktop.in  org.miika.filesorter.gschema.xml  org.miika.filesorter.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: filesorter-application.c  filesorter-application.h  filesorter-window.c  filesorter-window.h  filesorter-window.ui  filesorter.gresource.xml  main.c  meson.build  sorting.c  sorting.h
